@@ -32,38 +32,29 @@ task :coverage  do
 end
 
 if defined? Gem
-  spec_src =<<GEM
-# -*- encoding: utf-8 -*-
-Gem::Specification.new do |s|
-  s.name = '#{PKG_NAME}'
-  s.version = '#{PKG_VERSION}'
-  s.summary = 'Kit for building DSLs in Ruby'
-  s.description = 'This library contains recurring patterns, that are useful in the creation of internal Domain Specific Languages (DSL) in Ruby.'
+  spec = Gem::Specification.new do |s|
+    s.name = PKG_NAME
+    s.version = PKG_VERSION
+    s.summary = 'Kit for building DSLs in Ruby'
+    s.description = 'This library contains recurring patterns, that are useful in the creation of internal Domain Specific Languages (DSL) in Ruby.'
 
-  s.files = #{PKG_FILES.to_a.sort.inspect}
+    s.add_dependency('term-ansicolor', '~>1.0')
 
-  s.require_path = 'lib'
+    s.files = PKG_FILES
 
-  s.has_rdoc = true
-  s.rdoc_options << '--main' << 'doc-main.txt'
-  s.extra_rdoc_files << 'doc-main.txt'
-  s.test_files << 'tests/runner.rb'
+    s.require_path = 'lib'
 
-  s.author = "Florian Frank"
-  s.email = "flori@ping.de"
-  s.homepage = "http://#{PKG_NAME}.rubyforge.org"
-  s.rubyforge_project = "#{PKG_NAME}"
-end
-GEM
+    s.has_rdoc = true
+    s.rdoc_options << '--main' << 'doc-main.txt'
+    s.extra_rdoc_files << 'doc-main.txt'
+    s.test_files << 'tests/runner.rb'
 
-  desc 'Create a gemspec file'
-  task :gemspec do
-    File.open("#{PKG_NAME}.gemspec", 'w') do |f|
-      f.puts spec_src
-    end
+    s.author = "Florian Frank"
+    s.email = "flori@ping.de"
+    s.homepage = "http://flori.github.com/#{PKG_NAME}"
+    s.rubyforge_project = PKG_NAME
   end
 
-  spec = eval(spec_src)
   Rake::GemPackageTask.new(spec) do |pkg|
     pkg.need_tar = true
     pkg.package_files += PKG_FILES
@@ -88,7 +79,7 @@ EOT
 end
 
 desc "Default"
-task :default => [ :version, :gemspec, :test ]
+task :default => [ :version, :test ]
 
 desc "Prepare a release"
-task :release => [ :clean, :version, :gemspec, :package ]
+task :release => [ :clean, :version, :package ]
