@@ -1,0 +1,17 @@
+# vim: ts=2 sw=2 et ft=ruby
+# Call with two [ab]* strings on the tapes:
+# $ turing.rb prefix-equals-suffix-reversed-with-infix.stm ab ababab 
+
+ 1. right 1,  :goto => 2
+ 2. right 2,  :goto => 3
+ 3. cond  1,  :if => 'B', :then => 5, :else => 4
+ 4. cond  2,  :if => 'B', :then => 9, :else => 1
+ 5. cond  2,  :if => 'B', :then => 13, :else => 6
+ 6. write 0,  :symbol => 'b', :goto => 7
+ 7. right 0,  :goto => 8
+ 8. right 2,  :goto => 5
+ 9. write 0,  :symbol => 'a', :goto => 10
+10. right 0,  :goto => 11
+11. right 1,  :goto => 12
+12. cond  1,  :if => 'B', :then => 13, :else => 9
+13. halt
