@@ -1,0 +1,12 @@
+# vim: ts=2 sw=2 et ft=ruby
+# Call with two strings of ones on the tape:
+# $ turing.rb ones_differnce.mtm 1111 11
+
+0. right 1, :goto => 1
+1. right 2, :goto => 2
+2. cond  1, :if => '1', :then => 3, :else => 4
+3. cond  2, :if => '1', :then => 0, :else => 5
+4. cond  2, :if => '1', :then => 5, :else => 7
+5. write 0, :symbol => '1', :goto => 6
+6. left  0, :goto => 0
+7. halt
