@@ -1,0 +1,25 @@
+# vim: ts=2 sw=2 et ft=ruby
+# Call with two strings of ones on the tape:
+# $ turing.rb ones_differnce.stm 1111 11
+
+ 1. right :goto => 2
+ 2. cond :if => '1', :then => 1, :else => 3
+ 3. right :goto => 4
+ 4. cond :if => '1', :then => 5, :else => 17
+ 5. right :goto => 6
+ 6. cond :if => '1', :then => 5, :else => 7
+ 7. left :goto => 8
+ 8. write :symbol => 'B', :goto => 9
+ 9. left :goto => 10
+10. cond :if => '1', :then => 9, :else => 11
+11. left :goto => 12
+12. cond :if => '1', :then => 11, :else => 13
+13. right :goto => 14
+14. cond :if => '1', :then => 15, :else => 16
+15. write :symbol => 'B', :goto => 1
+16. write :symbol => '1', :goto => 18
+17. left :goto => 20
+18. right :goto => 19
+19. cond :if => '1', :then => 18, :else => 21
+20. halt
+21. halt
