@@ -1,6 +1,6 @@
 module DSLKit
   # DSLKit version
-  VERSION         = '0.2.6'
+  VERSION         = '0.2.7'
   VERSION_ARRAY   = VERSION.split(/\./).map { |x| x.to_i } # :nodoc:
   VERSION_MAJOR   = VERSION_ARRAY[0] # :nodoc:
   VERSION_MINOR   = VERSION_ARRAY[1] # :nodoc:
