@@ -1,3 +1,6 @@
+2009-11-22 (0.2.8)
+  * Added turing machines example.
+  * No more gemspec files.
 2009-07-20 (0.2.6)
   * Build gemspec file.
   * Some cleanup.
